# freecaeworkbench

./: .gitignore  .gitmodules  CMakeLists.txt  FCWorkbenchConfig.cmake.in
cmake/: fcworkbench_3rdparty.cmake  fcworkbench_utils.cmake
doc/: dev_log.md  ~$开发进度.pptx  开发进度.pptx
src/: CMakeLists.txt  FCGlobals.h  FCLibConfig.cmake.in
src/APP/: AppMainWindow.cpp  AppMainWindow.h  AppMainWindow.ui  CMakeLists.txt  FCAppActions.cpp  FCAppActions.h  FCAppController.cpp  FCAppController.h  FCAppCore.cpp  FCAppCore.h  FCAppDockingArea.cpp  FCAppDockingArea.h  FCAppProject.cpp  FCAppProject.h  FCAppRibbonArea.cpp  FCAppRibbonArea.h  FCAppUI.cpp  icon.qrc  main.cpp
src/APP/bak/: FCAppActions.cpp  FCAppActions.h
src/APP/file/: FCAppCommand.cpp  FCAppCommand.h  FCAppCore.cpp  FCAppDockingArea.cpp  FCAppDockingArea.h  FCAppRibbonApplicationMenu.cpp  FCAppRibbonApplicationMenu.h  FCAppUI.cpp  FCAppUI.h
src/FCActionManager/: CMakeLists.txt  FCActionManagerAPI.h  FCAppActions.cpp  FCAppActions.h
src/FCGUI/: CMakeLists.txt  FCGraphicOperateWidget.cpp  FCGraphicOperateWidget.h  FCGuiAPI.h  FCMessageLogViewWidget.cpp  FCMessageLogViewWidget.h  FCMessageLogViewWidget.ui  FCModelBuilderWidget.cpp  FCModelBuilderWidget.h  FCModelTreeWidget.cpp  FCModelTreeWidget.h  FCProgressWidget.cpp  FCProgressWidget.h  FCProgressWidget.ui  FCRecentFilesManager.cpp  FCRecentFilesManager.h  FCSettingParametersWidget.cpp  FCSettingParametersWidget.h
src/FCInterface/: CMakeLists.txt  FCActionsInterface.cpp  FCActionsInterface.h  FCBaseInterface.cpp  FCBaseInterface.h  FCCommandInterface.cpp  FCCommandInterface.h  FCCoreInterface.cpp  FCCoreInterface.h  FCDataManagerInterface.cpp  FCDataManagerInterface.h  FCDockingAreaInterface.cpp  FCDockingAreaInterface.h  FCInterfaceAPI.h  FCProjectInterface.cpp  FCProjectInterface.h  FCProjectTreeInterface.cpp  FCProjectTreeInterface.h  FCRibbonAreaInterface.cpp  FCRibbonAreaInterface.h  FCUIExtendInterface.cpp  FCUIExtendInterface.h  FCUIInterface.cpp  FCUIInterface.h
src/FCMessageHandler/: CMakeLists.txt  FCLog.h  FCMessageHandler.cpp  FCMessageHandler.h  FCMessageHandlerAPI.h  FCMessageLogItem.cpp  FCMessageLogItem.h  FCMessageQueueProxy.cpp  FCMessageQueueProxy.h
src/FCProjectTree/: CMakeLists.txt  FCProjcetTreeAPI.h  FCTree.cpp  FCTree.h  FCTreeItem.cpp  FCTreeItem.h
src/FCShared/: CMakeLists.txt  fc_order_small_map.hpp
src/FCUtils/: CMakeLists.txt  FCProcess.cpp  FCProcess.h  FCUtilsAPI.h
